clusters/talos-cluster/flux-system/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor-route
  namespace: flux-system
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "capacitor.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: capacitor
          port: 9000
